--- a/CursoUdemy/CursoUdemy.csproj
+++ b/CursoUdemy/CursoUdemy.csproj
@@ -134,6 +134,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MarcaController.cs" />
     <Compile Include="Controllers\SucursalController.cs" />
+    <Compile Include="Controllers\ViajeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -220,6 +221,7 @@
     <Compile Include="Models\Viaje.cs">
       <DependentUpon>BDPasajes.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\ViajeCLS.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -283,6 +285,7 @@
     <Content Include="Views\Cliente\Agregar.cshtml" />
     <Content Include="Views\Empleado\Index.cshtml" />
     <Content Include="Views\Bus\Index.cshtml" />
+    <Content Include="Views\Viaje\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
