--- a/CursoUdemy/CursoUdemy.csproj
+++ b/CursoUdemy/CursoUdemy.csproj
@@ -289,6 +289,8 @@
     <Content Include="Views\Empleado\Agregar.cshtml" />
     <Content Include="Views\Marca\Editar.cshtml" />
     <Content Include="Views\Sucursal\Editar.cshtml" />
+    <Content Include="Views\Cliente\Editar.cshtml" />
+    <Content Include="Views\Empleado\Editar.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
