--- a/CursoUdemy/CursoUdemy.csproj
+++ b/CursoUdemy/CursoUdemy.csproj
@@ -291,6 +291,7 @@
     <Content Include="Views\Sucursal\Editar.cshtml" />
     <Content Include="Views\Cliente\Editar.cshtml" />
     <Content Include="Views\Empleado\Editar.cshtml" />
+    <Content Include="Views\Bus\Agregar.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
