--- a/CursoUdemy/CursoUdemy.csproj
+++ b/CursoUdemy/CursoUdemy.csproj
@@ -293,6 +293,7 @@
     <Content Include="Views\Empleado\Editar.cshtml" />
     <Content Include="Views\Bus\Agregar.cshtml" />
     <Content Include="Views\Bus\Editar.cshtml" />
+    <Content Include="Views\Viaje\Agregar.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
