cambio en el source de BD en Webconfig, por cambio de PC, configuracion de boton eliminar marcaController y Index marca

--- a/CursoUdemy/Web.config
+++ b/CursoUdemy/Web.config
@@ -57,8 +57,8 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="BDPasajeEntities" connectionString="metadata=res://*/Models.BDPasajes.csdl|res://*/Models.BDPasajes.ssdl|res://*/Models.BDPasajes.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-8RFS1M0;initial catalog=BDPasaje;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="BDPasajeEntities1" connectionString="metadata=res://*/Models.BDPasajes.csdl|res://*/Models.BDPasajes.ssdl|res://*/Models.BDPasajes.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-8RFS1M0;initial catalog=BDPasaje;persist security info=True;user id=sa;password=aldair;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="BDPasajeEntities" connectionString="metadata=res://*/Models.BDPasajes.csdl|res://*/Models.BDPasajes.ssdl|res://*/Models.BDPasajes.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-7M5R5GB;initial catalog=BDPasaje;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="BDPasajeEntities1" connectionString="metadata=res://*/Models.BDPasajes.csdl|res://*/Models.BDPasajes.ssdl|res://*/Models.BDPasajes.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-7M5R5GB;initial catalog=BDPasaje;persist security info=True;user id=sa;password=aldair;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
